# mle-training

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  MLproject  README.md  docker_session.txt  env.yml  nonstandardcode.py  pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py  train.py
MLE_Training_5175.egg-info/: PKG-INFO  SOURCES.txt
artifacts/.gitkeep/: housing_prepared.pkl  lin_reg.pkl  tree_reg.pkl  x_test.pkl
docs/: MLE_Training_Package.rst  conf.py
docs/_build/doctrees/: MLE_Training_Package.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  MLE_Training_Package.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
mlruns/871735233777413865/: meta.yaml
mlruns/871735233777413865/9d13965b10694dd49efaf689707a7ad9/: meta.yaml
notebooks/reference/: Housing.ipynb
src/: index.py
src/MLE_Training.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/MLE_Training_Package/: ingest_data.py  pyproject.toml  score.py  train.py
src/MLE_Training_Package/Custom_Transformer/: customTransformer.py
src/MLE_Training_Package/MLE_Training_package.egg-info/: PKG-INFO  SOURCES.txt
src/MLFLOW/: test.py  train.py
src/RandomForestMLEPackage/: __init__.py  predictHouseValue.py  pyproject.toml
src/RandomForestMLEPackage/RandomForestMLEPackage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/functional_tests/: test_train.py
tests/installation_test/: test_package_exist.py
tests/unit_tests/: test_data_ingest.py
(+18 files in other folders)
