[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[project]
name = "RandomForestMLEPackage"
version = "0.0.2"
description = "ML project that predicts the house price"
authors = [{name = "MLE", email = "sulaiha.shameena@tigeranalytics.com"}]
